manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cs-app
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: cs-app
