manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "cs-app-ingress"
  namespace: "kube-system"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: fillipinascimento.com 
  labels:
    app: cs-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: cs-app
              servicePort: 80
